== 1.3.0

- Warbler can now package regular Ruby projects as executable jar
  files. See the README.txt file for details.
- WARBLER-18: Heed BUNDLE_GEMFILE in environment

== 1.2.1

- Add --directoryListings=false to Winstone launch by default. In some
  cases (sinatra) Winstone's directory listing masks application
  content. (Fletcher Nichol)
- Build and add META-INF/init.rb file into the war file. This is
  recognized and loaded by JRuby-Rack 1.0.3 as a new way to do extra
  environment initialization before the web framework is loaded. See
  config.init_contents in Warbler::Config for details.

== 1.2.0

- Drop compatibility with earlier versions of Bundler -- Bundler has
  changed a lot in a short period of time, so I'm expecting the number
  of people depending on 0.8 or 0.9 to be small. Please use Warbler
  1.2.0 with applications that depend on Bundler 1.0 or higher.
- Support for Bundler groups. The 'development' and 'test' groups are
  excluded by default.
- Add 'compiled' feature: With this feature added to config.features
  Warbler will pre-compile all Ruby files and will not ship the
  original Ruby source in your war file.
- warble.rb: Add config.bundle_without that controls Bundler groups to
  be skipped, like 'Bundler.settings.without'.
- warble.rb: Add config.compiled_ruby_files to specify which Ruby
  files to compile when using the "compiled" feature. Defaults to
  compiling all Ruby files.
- warble.rb: Add config.gem_excludes which allows exclusion of some
  gem files from the war. Default assumes no exclusions.
- Exclude 'tmp/war' directory so that people upgrading from 0.9 won't
  accidentally include it in their war file.

== 1.1.0

- Add concept of "features" -- small Rake tasks that run before the
  creation of the war file and make manipulations to the war file
  structure.
- Add 'gemjar' feature: Bundle all gems into a gems.jar to reduce the
  number of files in the archive (mostly useful for Google AppEngine).